--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: python
 sudo: required
 dist: xenial
 before_install:
-  - sudo apt-get install -y gs
+  - sudo apt-get install -y ghostscript
 python:
   - "3.6"
   - "3.7"
